added horrible music

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,17 +1,5 @@
-body {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.image {
-  height: 50vh;
-  width: auto;
-}
-
-.name {
-  font-size: 5rem;
-}
-
 .list {
-  list-style-type: none;
+  color: red;
+  display: flex;
+  flex-wrap: wrap;
 }
